[tool.poetry]
name = "reactpy-apexcharts"
version = "0.0.11"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stevej2608/reactpy-apexcharts"
repository = "https://github.com/stevej2608/reactpy-apexcharts"


[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
reactpy = "^1.0.2"

[tool.poetry.group.dev.dependencies]

pytest-timeout = "2.2.0"
fastapi = "^0.109.0"
playwright = "1.41.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
starlette = ">=0.13.6"
trio = "^0.24.0"
twine = "^4.0.2"
uvicorn = {extras = ["standard"], version = ">=0.19.0"}
pillow = "^10.2.0"
pixelmatch = "^0.3.0"

[tool.pytest.ini_options]
testpaths = "tests"
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"

# -r Show extra test summary info as specified by chars: 
#   (s)kipped, 
#   (x)failed, 
#   (X)passed, 
# addopts = "-rsxX"

# asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
